Europa League added

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
     "googleapis": "^39.2.0",
+    "iso-8859-2": "^1.0.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.4"
   }
